EPBDS-13715 Upgrade to Groovy 4