@@ -1,8 +1,5 @@
 package org.openl.gen.groovy;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Pattern;
 
@@ -10,22 +7,21 @@ public class TypeHelper {
 
     private static final Pattern ARRAY_MATCHER = Pattern.compile("[\\[\\]]");
 
-    public static final Set<String> DEFAULT_IMPORTS = Collections
-        .unmodifiableSet(new HashSet<>(Arrays.asList("java.lang.Object",
-            "java.lang.Character",
-            "java.lang.Class",
-            "java.lang.Enum",
-            "java.lang.Float",
-            "java.lang.Long",
-            "java.lang.Short",
-            "java.lang.Double",
-            "java.lang.CharSequence",
-            "java.lang.Integer",
-            "java.lang.Byte",
-            "java.lang.Void")));
+    public static final Set<String> DEFAULT_IMPORTS = Set.of("java.lang.Object",
+        "java.lang.Character",
+        "java.lang.Class",
+        "java.lang.Enum",
+        "java.lang.Float",
+        "java.lang.Long",
+        "java.lang.Short",
+        "java.lang.Double",
+        "java.lang.CharSequence",
+        "java.lang.Integer",
+        "java.lang.Byte",
+        "java.lang.Void");
 
-    public static final Set<String> PRIMITIVES = Collections.unmodifiableSet(
-        new HashSet<>(Arrays.asList("byte", "short", "int", "long", "float", "double", "char", "boolean", "void")));
+    public static final Set<String> PRIMITIVES = Set
+        .of("byte", "short", "int", "long", "float", "double", "char", "boolean", "void");
 
     protected TypeHelper() {
     }
